improvement of the semantics with priority propagation