@@ -4,7 +4,7 @@ import com.google.common.base.Objects;
 import fr.inria.diverse.k3.al.annotationprocessor.Aspect;
 import fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspectModelAspectProperties;
 import fr.univcotedazur.kairos.languafranca.semantics.k3dsa.StartedAction;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import org.eclipse.xtext.xbase.lib.InputOutput;
 import org.icyphy.linguaFranca.Model;
 import org.icyphy.linguaFranca.Variable;
@@ -61,26 +61,26 @@ public class ModelAspect {
     };
   }
   
-  public static LinkedList<StartedAction> startedTimers(final Model _self) {
+  public static ArrayList<StartedAction> startedTimers(final Model _self) {
     final fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspectModelAspectProperties _self_ = fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspectModelAspectContext.getSelf(_self);
     Object result = null;
-    // #DispatchPointCut_before# LinkedList<StartedAction> startedTimers()
+    // #DispatchPointCut_before# ArrayList<StartedAction> startedTimers()
     if (_self instanceof org.icyphy.linguaFranca.Model){
     	result = fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspect._privk3_startedTimers(_self_, (org.icyphy.linguaFranca.Model)_self);
     };
-    return (java.util.LinkedList<fr.univcotedazur.kairos.languafranca.semantics.k3dsa.StartedAction>)result;
+    return (java.util.ArrayList<fr.univcotedazur.kairos.languafranca.semantics.k3dsa.StartedAction>)result;
   }
   
-  public static void startedTimers(final Model _self, final LinkedList<StartedAction> startedTimers) {
+  public static void startedTimers(final Model _self, final ArrayList<StartedAction> startedTimers) {
     final fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspectModelAspectProperties _self_ = fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspectModelAspectContext.getSelf(_self);
-    // #DispatchPointCut_before# void startedTimers(LinkedList<StartedAction>)
+    // #DispatchPointCut_before# void startedTimers(ArrayList<StartedAction>)
     if (_self instanceof org.icyphy.linguaFranca.Model){
     	fr.univcotedazur.kairos.languafranca.semantics.k3dsa.ModelAspect._privk3_startedTimers(_self_, (org.icyphy.linguaFranca.Model)_self,startedTimers);
     };
   }
   
   protected static void _privk3_timeJump(final ModelAspectModelAspectProperties _self_, final Model _self) {
-    ModelAspect.currentTime(_self, ModelAspect.startedTimers(_self).getFirst().releaseDate);
+    ModelAspect.currentTime(_self, ModelAspect.startedTimers(_self).get(0).releaseDate);
     Integer _currentTime = ModelAspect.currentTime(_self);
     String _plus = ("currentTime is now " + _currentTime);
     InputOutput.<String>println(_plus);
@@ -92,17 +92,17 @@ public class ModelAspect {
     String _plus_1 = (_plus + " for ");
     String _plus_2 = (_plus_1 + Integer.valueOf(duration));
     String _plus_3 = (_plus_2 + " --> ");
-    LinkedList<StartedAction> _startedTimers = ModelAspect.startedTimers(_self);
+    ArrayList<StartedAction> _startedTimers = ModelAspect.startedTimers(_self);
     String _plus_4 = (_plus_3 + _startedTimers);
     InputOutput.<String>println(_plus_4);
     boolean _isEmpty = ModelAspect.startedTimers(_self).isEmpty();
     if (_isEmpty) {
-      LinkedList<StartedAction> _startedTimers_1 = ModelAspect.startedTimers(_self);
+      ArrayList<StartedAction> _startedTimers_1 = ModelAspect.startedTimers(_self);
       Integer _currentTime = ModelAspect.currentTime(_self);
       int _plus_5 = ((_currentTime).intValue() + duration);
       StartedAction _startedAction = new StartedAction(a, _plus_5);
       _startedTimers_1.add(_startedAction);
-      LinkedList<StartedAction> _startedTimers_2 = ModelAspect.startedTimers(_self);
+      ArrayList<StartedAction> _startedTimers_2 = ModelAspect.startedTimers(_self);
       String _plus_6 = ("afterSchedule: " + _startedTimers_2);
       InputOutput.<String>println(_plus_6);
       return;
@@ -113,13 +113,13 @@ public class ModelAspect {
         int _plus_7 = ((_currentTime_1).intValue() + duration);
         boolean _greaterThan = ((ModelAspect.startedTimers(_self).get(i).releaseDate).intValue() > _plus_7);
         if (_greaterThan) {
-          LinkedList<StartedAction> _startedTimers_3 = ModelAspect.startedTimers(_self);
+          ArrayList<StartedAction> _startedTimers_3 = ModelAspect.startedTimers(_self);
           int _max = Math.max(0, (i - 1));
           Integer _currentTime_2 = ModelAspect.currentTime(_self);
           int _plus_8 = ((_currentTime_2).intValue() + duration);
           StartedAction _startedAction_1 = new StartedAction(a, _plus_8);
           _startedTimers_3.add(_max, _startedAction_1);
-          LinkedList<StartedAction> _startedTimers_4 = ModelAspect.startedTimers(_self);
+          ArrayList<StartedAction> _startedTimers_4 = ModelAspect.startedTimers(_self);
           String _plus_9 = ("startedTimer (1): " + _startedTimers_4);
           InputOutput.<String>println(_plus_9);
           return;
@@ -128,12 +128,12 @@ public class ModelAspect {
         int _minus = (_size - 1);
         boolean _equals = (i == _minus);
         if (_equals) {
-          LinkedList<StartedAction> _startedTimers_5 = ModelAspect.startedTimers(_self);
+          ArrayList<StartedAction> _startedTimers_5 = ModelAspect.startedTimers(_self);
           Integer _currentTime_3 = ModelAspect.currentTime(_self);
           int _plus_10 = ((_currentTime_3).intValue() + duration);
           StartedAction _startedAction_2 = new StartedAction(a, _plus_10);
           _startedTimers_5.add(_startedAction_2);
-          LinkedList<StartedAction> _startedTimers_6 = ModelAspect.startedTimers(_self);
+          ArrayList<StartedAction> _startedTimers_6 = ModelAspect.startedTimers(_self);
           String _plus_11 = ("startedTimer: (3)" + _startedTimers_6);
           InputOutput.<String>println(_plus_11);
           return;
@@ -189,14 +189,14 @@ public class ModelAspect {
     }
   }
   
-  protected static LinkedList<StartedAction> _privk3_startedTimers(final ModelAspectModelAspectProperties _self_, final Model _self) {
+  protected static ArrayList<StartedAction> _privk3_startedTimers(final ModelAspectModelAspectProperties _self_, final Model _self) {
     try {
     	for (java.lang.reflect.Method m : _self.getClass().getMethods()) {
     		if (m.getName().equals("getStartedTimers") &&
     			m.getParameterTypes().length == 0) {
     				Object ret = m.invoke(_self);
     				if (ret != null) {
-    					return (java.util.LinkedList) ret;
+    					return (java.util.ArrayList) ret;
     				} else {
     					return null;
     				}
@@ -208,7 +208,7 @@ public class ModelAspect {
     return _self_.startedTimers;
   }
   
-  protected static void _privk3_startedTimers(final ModelAspectModelAspectProperties _self_, final Model _self, final LinkedList<StartedAction> startedTimers) {
+  protected static void _privk3_startedTimers(final ModelAspectModelAspectProperties _self_, final Model _self, final ArrayList<StartedAction> startedTimers) {
     boolean setterCalled = false;
     try {
     	for (java.lang.reflect.Method m : _self.getClass().getMethods()) {
